--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "productName": "javaee-frontend",
   "author": "sunwenxiang <sunwenxiang133@gmail.com>",
   "private": true,
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
@@ -12,6 +17,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.2.1",
     "core-js": "^3.6.5",
     "parallax-js": "^3.1.0",
@@ -24,11 +31,13 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app-webpack": "^3.0.0",
+    "commitizen": "^4.2.6",
     "dotenv": "^16.0.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "less": "^3.1.3",
     "lodash": "^4.17.21",
     "prettier": "^2.5.1"
   },
