--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.2.1",
     "core-js": "^3.6.5",
+    "element-plus": "^2.2.28",
     "parallax-js": "^3.1.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
